Add content to index.html

--- a/show.css
+++ b/show.css
@@ -6,10 +6,8 @@
     
     <body>
      <input type="checkbox">
-     Work on Characters and backgrounds
-     Character design
-     Think of character interaction
-     Create storyline
+    <h2> Work on Characters and backgrounds</h2>
+    <a href="/index.html">Go Back...</a>
     </body>
     </head>
 </html>
